syntax = "proto3";
package appTypes;
option go_package = "app/types";

message QueryBalance{
    bytes userPubKey =1;
}